--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,15 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dash==2.14.2
+dash-bootstrap-components==1.5.0
+dash-bootstrap-templates==1.1.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==3.0.1
 idna==3.6
 importlib-metadata==7.0.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
@@ -19,7 +22,9 @@ numpy==1.26.3
 packaging==23.2
 pandas==2.2.0
 plotly==5.18.0
+pluggy==1.4.0
 pyarrow==15.0.0
+pytest==8.0.0
 python-dateutil==2.8.2
 pytz==2023.4
 requests==2.31.0
